--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=otrocliente
 spring.config.import=optional:configserver:http://localhost:9999/
 
-
 server.port=9090
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 miclavesecret=nomelasesss
@@ -13,3 +12,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
